<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.PermissionFragment">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="16sp"
        android:layout_below="@+id/titleTextView"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/grantPermissionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grant_permission"
        android:layout_below="@+id/descriptionTextView"
        android:layout_centerHorizontal="true"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/btn_bg"
        android:text="@string/next"
        android:textColor="@color/white" />

</RelativeLayout>