<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:padding="16dp"
    tools:context=".ui.activities.PreviewActivity">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateTint="#fff" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:contentDescription="@string/description"
        />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/downloadIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_33sdp"
                android:layout_height="@dimen/_33sdp"
                android:background="@drawable/ic_round_pre"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_download"
                app:tint="@color/white"
                android:contentDescription="@string/downloads"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/shareIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_33sdp"
                android:layout_height="@dimen/_33sdp"
                android:background="@drawable/ic_round_pre"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/ic_share"
                app:tint="@color/white"
                android:contentDescription="@string/share"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/deleteIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_33sdp"
                android:layout_height="@dimen/_33sdp"
                android:background="@drawable/ic_round_pre"
                android:padding="@dimen/_9sdp"
                android:src="@drawable/ic_delete"
                app:tint="@color/white"
                android:contentDescription="@string/delete"
                />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>