<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ChatViewActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_5sdp"
        android:background="@null"
        android:contentDescription="@string/description"
        android:padding="@dimen/_7sdp"
        android:src="@drawable/arrow"
        app:tint="@color/primary" />

    <ImageView
        android:id="@+id/userPic"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_toEndOf="@+id/back"
        android:contentDescription="@string/description"
        android:src="@drawable/avatar" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_toEndOf="@+id/userPic"
        android:text="@string/app_name"
        android:textSize="14sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomLayout"
        android:layout_below="@+id/back"
        android:layout_margin="@dimen/_10sdp" />

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:elevation="@dimen/_8sdp"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/send_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/message"
                style="@style/messageStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="4dp"
                android:layout_toStartOf="@+id/send"
                android:hint="@string/demo_message"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:textColorHint="@color/gray" />

            <ImageView
                android:id="@+id/send"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_7sdp"
                android:background="@drawable/ic_round_pre"
                android:contentDescription="@string/description"
                android:padding="12dp"
                android:src="@drawable/send"
                android:visibility="visible"
                app:tint="@color/white" />


        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>